--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
+    <style>
+        .info
+        {
+            background-color:gold;
+        } 
+        .error {
+            background-color: red;
+        }
+
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords" content="equipos,mexico,liga">
+    <meta name="description" content="En este sitio encontraras toda la informacion de la liga mexicana de futbol">
+    <meta name="author" content="OKGO">
+    <title>LIGA MX</title>
+    <link rel="stylesheet" href="estilo.css">
+
 </head>
 <body>
     
 </body>
-    <h1>Liga Mexicana de Futbol</h1>
+    <h1 style="background-color: brown;" class="info error">Liga Mexicana de Futbol</h1>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt odit ipsam dolor quibusdam hic harum aut quia suscipit, amet non sint obcaecati eveniet eos cupiditate quo? Exercitationem ducimus cupiditate distinctio.</p>
+    <p tabindex="1" lang="es" class="info">La LIGA MX tambien conocida como LIGA BBVA MX es la liga local del pais Mexicano, donde compiten 18 equipos mexicanos todos con el mismo objetivo de ser campeones, ya que solo 1 equipo es campeon.  </p>
 
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam minima iusto officia repellat eum, sit illum asperiores blanditiis quasi, rem cum ullam nobis repellendus tempora distinctio! Dicta sapiente odit laudantium.</p>
+    <p tabindex="3" lang="en" id="parrafox" class="oferta">El equipo que mas campeonatos ha obtenido es el America con 15, despues las chivas con 12, Toluca 10 y Cruz azul 9.</p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, laborum rem! Maiores iste culpa laboriosam voluptatem modi aut neque odio labore, optio eum non accusamus deserunt odit? Ullam, corrupti sit.</p>
+    <p tabindex="2" class="error">La temporada se disputa anualmente, divido en 2 torneos cortos, cada uno con fase final que viene siendo la liguilla y el campeon. Previo a la ronda de cuartos de final, habrá una fase preliminar llamada play in en la que participarán los clubes ubicados entre las posiciones 7 y 10 de la tabla general.</p>
 </html>
